# rs-1brc

./: .gitignore  Cargo.toml  measurements_simple.txt
src/: approach_0.rs  approach_1.rs  approach_2.rs  approach_3.rs  approach_4.rs  approach_5.rs  approach_6.rs  approach_7.rs  approach_8.rs  approach_9.rs  main.rs
