[package]
name = "rs-1brc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = { version = "1" }
hashbrown = { version = "0.14.5" }
memmap2 = { version = "0.9.4" }

[profile.release]
debug = true
